// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="page page-limited"
>
  <withRouter(TutorialSelection)
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    currentUser={
      Object {
        "dismissedNotices": Object {
          "educationPrinciples": false,
        },
        "groups": Array [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": Array [],
      }
    }
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="page page-limited"
>
  <withRouter(TutorialSelection)
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    currentUser={
      Object {
        "dismissedNotices": Object {
          "educationPrinciples": false,
        },
        "groups": Array [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": Array [],
      }
    }
    projectBinding={
      Object {
        "alm": "azure",
        "key": "foo",
        "monorepo": false,
        "repository": "REPOSITORY_NAME",
        "slug": "PROJECT_NAME",
        "url": "https://ado.my_company.com/mycollection",
      }
    }
  />
</div>
`;
